2001-04-28  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* BUGS: added info about the direct mount problems on Linux and
	about the kernel patches on www.am-utils.org.

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_unmount_2_req):
	removed obsolete comment

	* amd/autil.c (forcibly_timeout_mp): always log a message when the
	forced unmount request is ignored
	(mf_mounted): don't lstat unless this is an autofs mount point,
	lest we deadlock

	* amd/amfs_auto.c (amfs_auto_bgmount): don't gratuitously add
	MFF_MKMNT to the flags, it causes deadlocks later on when
	unmounting

2001-04-14  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* COPYING: update copyright year

	* amd/amfs_auto.c, amd/amfs_host.c, amd/amfs_nfsx.c,
	amd/amfs_toplvl.c, amd/amfs_union.c, amd/conf.c, amd/info_nis.c,
	amd/info_nisplus.c, amd/mapc.c, amd/nfs_subr.c, amd/ops_nfs.c,
	amd/rpc_fwd.c, amd/srvr_amfs_auto.c, amd/srvr_nfs.c,
	conf/autofs/autofs_solaris_v1.c, conf/mtab/mtab_file.c,
	conf/mtab/mtab_isc3.c, conf/mtab/mtab_svr4.c,
	conf/transp/transp_sockets.c, conf/transp/transp_tli.c,
	libamu/mount_fs.c, libamu/mtab.c: rewritten various dlog/plog
	messages for clarity, to avoid duplication, to better recognize
	what the message means and where it ran, and to fix typos.

	* amd/nfs_subr.c (nfsproc_lookup_2_svc): moved trace message of
	function's name to the beginning of the function, before any other
	messages are logged.

2001-04-14  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/mount/mount_linux.c (do_mount_linux): removed plog() of
	binary data

2001-04-05  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* include/am_defs.h: define NFSCLIENT, NFS, PCFS, LOFS, RFS,
	MSDOSFS, MFS and CD9660 to 1, so that both #if FOO and #ifdef FOO
	work (needed for MacOS X); removed duplicate definition of NFS.

2001-03-29  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* amd/amd.h, amd/amfs_auto.c, amd/conf.c,
	doc/am-utils.texi,
	scripts/amd.conf-sample, scripts/amd.conf.5: